--- a/about-library.html
+++ b/about-library.html
@@ -10,15 +10,18 @@
 <header>
     <div class="header">
         <div class="header__bg">
+            <div class="container">
             <div class="header__bg-line">
-                <div class="container">
-                    <nav class="header__menu">
-                         <a href="index.html"><div class="header__logo"> <h2><span>Бібліотека </span> | ДонНУ</h2></div></a>
+                    <a href="index.html"><div class="header__logo"> <h2><span>Бібліотека </span> | ДонНУ</h2></div></a>
+                            <div class="header__burger">
+                                <span> </span>
+                            </div>
+                     <nav class="header__menu">
                         <ul class="header__list">
                            <li><a href="about-library.html">Про бібліотеку</a></li>
                             <li><a href="news-library.html">Новини</a></li>
                             <li><a href="resource.html">Інформаційні ресурси</a></li>
-                           <li><a href="contact-library.html">Контакти</a></li>
+                            <li><a href="contact-library.html">Контакти</a></li>
                             <li><a href="/"><img src="img/earth.png" alt=""></a></li>
                         </ul>
                     </nav>
@@ -27,6 +30,7 @@
         </div>
     </div>
 </header>
+
 
 <main>
     <div class="main">
