--- a/contact-library.html
+++ b/contact-library.html
@@ -10,12 +10,15 @@
 <header>
     <div class="header">
         <div class="header__bg">
+            <div class="container">
             <div class="header__bg-line">
-                <div class="container">
-                    <nav class="header__menu">
-                         <a href="index.html"><div class="header__logo"> <h2><span>Бібліотека </span> | ДонНУ</h2></div></a>
+                    <a href="index.html"><div class="header__logo"> <h2><span>Бібліотека </span> | ДонНУ</h2></div></a>
+                            <div class="header__burger">
+                                <span> </span>
+                            </div>
+                     <nav class="header__menu">
                         <ul class="header__list">
-                            <li><a href="about-library.html">Про бібліотеку</a></li>
+                           <li><a href="about-library.html">Про бібліотеку</a></li>
                             <li><a href="news-library.html">Новини</a></li>
                             <li><a href="resource.html">Інформаційні ресурси</a></li>
                             <li><a href="contact-library.html">Контакти</a></li>
@@ -81,11 +84,6 @@
 
                               <h2 class="card-contact__director"> Завідувачка відділу комплексного бібліотечно-бібліографічного обслуговування</h2>
                             <p class="card-contact__text">Кондратюк Юлія Василівна </p>
-
-
-
-
-
                         </div>
 
                     </div>
