--- a/index.html
+++ b/index.html
@@ -13,10 +13,13 @@
 <header>
     <div class="header">
         <div class="header__bg">
+            <div class="container">
             <div class="header__bg-line">
-                <div class="container">
-                    <nav class="header__menu">
-                        <a href="index.html"><div class="header__logo"> <h2><span>Бібліотека </span> | ДонНУ</h2></div></a>
+                    <a href="index.html"><div class="header__logo"> <h2><span>Бібліотека </span> | ДонНУ</h2></div></a>
+                            <div class="header__burger">
+                                <span> </span>
+                            </div>
+                     <nav class="header__menu">
                         <ul class="header__list">
                            <li><a href="about-library.html">Про бібліотеку</a></li>
                             <li><a href="news-library.html">Новини</a></li>
@@ -44,16 +47,18 @@
                     <p class="main__text">Вас вітає Наукова бібліотека Донецького національного університету імені
                         Василя Стуса. Бібліотека, яка була заснована ще в далекому 1937 році, сьогодні пише сторінки
                         своєї нової історії існування в м. Вінниця. </p>
-                    <img src="img/logo__univer.png" alt="">
+                    <img class="image-block" src="img/logo__univer.png" alt="">
                 </div>
 
                 <div class="main__about">
-                    <img src="img/logo__library.png" alt="">
+                    <img class="image-block" src="img/logo__library.png" alt="">
                     <p class="main__text">Співробітники бібліотеки Стусівського університету зробили за допомогою
                         студентів університету нову сучасну бібліотеку, з фондом електронних видань, з послугами для
                         користувачів відповідно їх запитам та інтересам, на користь навчальній, науковій та
                         просвітницькій діяльності.</p>
                 </div>
+
+
             </div>
         </div>
     </div>
