--- a/news-library.html
+++ b/news-library.html
@@ -10,12 +10,15 @@
 <header>
     <div class="header">
         <div class="header__bg">
+            <div class="container">
             <div class="header__bg-line">
-                <div class="container">
-                    <nav class="header__menu">
-                         <a href="index.html"><div class="header__logo"> <h2><span>Бібліотека </span> | ДонНУ</h2></div></a>
+                    <a href="index.html"><div class="header__logo"> <h2><span>Бібліотека </span> | ДонНУ</h2></div></a>
+                            <div class="header__burger">
+                                <span> </span>
+                            </div>
+                     <nav class="header__menu">
                         <ul class="header__list">
-                            <li><a href="about-library.html">Про бібліотеку</a></li>
+                           <li><a href="about-library.html">Про бібліотеку</a></li>
                             <li><a href="news-library.html">Новини</a></li>
                             <li><a href="resource.html">Інформаційні ресурси</a></li>
                             <li><a href="contact-library.html">Контакти</a></li>
@@ -41,7 +44,7 @@
                     <p class="card-news__text">Приклад тексту про новину Приклад тексту про новину Приклад тексту про новину Приклад тексту про новину Приклад тексту про новину</p>
                     <div class="card-news__button"><a href="/">Читати далі</a></div>
                 </div>
-                <img src="img/news-foto.png" alt="" class="card-news__image">
+                <img src="img/news-foto.png" alt="" class="card-news__image" width="198" height="190">
             </div>
 
             <div class="news__card card-news">
@@ -50,7 +53,7 @@
                     <p class="card-news__text">Приклад тексту про новину Приклад тексту про новину Приклад тексту про новину Приклад тексту про новину Приклад тексту про новину</p>
                     <div class="card-news__button"><a href="/">Читати далі</a></div>
                 </div>
-                <img src="img/news-foto.png" alt="" class="card-news__image">
+                <img src="img/news-foto.png" alt="" class="card-news__image" width="198" height="190">
             </div>
 
             <div class="news__card card-news">
@@ -59,7 +62,7 @@
                     <p class="card-news__text">Приклад тексту про новину Приклад тексту про новину Приклад тексту про новину Приклад тексту про новину Приклад тексту про новину</p>
                     <div class="card-news__button"><a href="/">Читати далі</a></div>
                 </div>
-                <img src="img/news-foto.png" alt="" class="card-news__image">
+                <img src="img/news-foto.png" alt="" class="card-news__image" width="198" height="190">
             </div>
 
             <div class="news__card card-news">
@@ -68,7 +71,7 @@
                     <p class="card-news__text">Приклад тексту про новину Приклад тексту про новину Приклад тексту про новину Приклад тексту про новину Приклад тексту про новину</p>
                     <div class="card-news__button"><a href="/">Читати далі</a></div>
                 </div>
-                <img src="img/news-foto.png" alt="" class="card-news__image">
+                <img src="img/news-foto.png" alt="" class="card-news__image" width="198" height="190">
             </div>
 
             <div class="news__card card-news">
@@ -77,7 +80,7 @@
                     <p class="card-news__text">Приклад тексту про новину Приклад тексту про новину Приклад тексту про новину Приклад тексту про новину Приклад тексту про новину</p>
                     <div class="card-news__button"><a href="/">Читати далі</a></div>
                 </div>
-                <img src="img/news-foto.png" alt="" class="card-news__image">
+                <img src="img/news-foto.png" alt="" class="card-news__image" width="198" height="190">
             </div>
 
             <div class="news__card card-news">
@@ -86,7 +89,7 @@
                     <p class="card-news__text">Приклад тексту про новину Приклад тексту про новину Приклад тексту про новину Приклад тексту про новину Приклад тексту про новину</p>
                     <div class="card-news__button"><a href="/">Читати далі</a></div>
                 </div>
-                <img src="img/news-foto.png" alt="" class="card-news__image">
+                <img src="img/news-foto.png" alt="" class="card-news__image" width="198" height="190">
             </div>
 
             <div class="news__card card-news">
@@ -95,7 +98,7 @@
                     <p class="card-news__text">Приклад тексту про новину Приклад тексту про новину Приклад тексту про новину Приклад тексту про новину Приклад тексту про новину</p>
                     <div class="card-news__button"><a href="/">Читати далі</a></div>
                 </div>
-                <img src="img/news-foto.png" alt="" class="card-news__image">
+                <img src="img/news-foto.png" alt="" class="card-news__image" width="198" height="190">
             </div>
 </div>
 </div>
